bluec-tests/tests/invalid/types_float/compound_bitwise_and.c
int main(void) {
    // Can't perform compound bitwise operations with floats
    float f = 1.0f;
    f &= 0;
    return (int) f;
}